--- a/20-mytext/04-ionic/views/admin/banners.ejs
+++ b/20-mytext/04-ionic/views/admin/banners.ejs
@@ -156,8 +156,9 @@
                 <td><%= banners[i].username%></td>
                 <td><%= banners[i].title%></td>
                 <td><%= banners[i].description%></td>
-                <!-- <td><textarea style="width:100%;height:130px"><%= banners[i].article%></textarea></td> -->
-                <td><%= banners[i].article%></td>
+                <td>
+                  <textarea style="width:100%;background:transparent"><%= banners[i].article%></textarea>
+                </td>
                 <td>
                   <a href="?act=mod&id=<%= banners[i].ID%>" class="mod">修改</a>
                   <a href="?act=del&id=<%= banners[i].ID%>" onclick="return confirm('你真的要删除这条数据吗?')" class="del">删除</a>
@@ -182,7 +183,7 @@
           </div>
           <% }%>
           <br>
-          <div style="background-image: url(/upload/bb.png);width: 500px">
+          <div style="width: 500px">
             <form action="?" method="post" enctype="multipart/form-data">
               用户：<input type="text" name="username" style="width:60%" /><br>
               标题：<input type="text" name="title"  style="width:60%"/><br>
