--- a/20-mytext/04-ionic/views/admin/index.ejs
+++ b/20-mytext/04-ionic/views/admin/index.ejs
@@ -72,7 +72,7 @@
 			color: #207B94;
 		}
 		.number{
-			width: 100%;
+			width: 90%;
 			height: 240px;
 		}
 		.enroll{
@@ -169,10 +169,10 @@
 		  },
 		  series: [{
 			  name: '本周',
-			  data: [7, 6, 9, 14, 16, 17, 14]
+			  data: [2, 1, 3,0, 1, 0, 2]
 		  }, {
 			  name: '上周',
-			  data: [3, 4, 5, 8, 11, 10, 6]
+			  data: [2, 4, 1, 3, 0, 3, 3]
 		  }]
 	  });
 	  $('#container2').highcharts({
@@ -209,7 +209,7 @@
 		  },
 		  series: [{
 			  name:'注册量',
-			  data: [3,4 ,6, 7, 5, 6, 9, 10] }]
+			  data: [0,1 ,1, 0, 0, 0, 0, 1] }]
 	  });
   });
 	</script>
@@ -235,28 +235,28 @@
 						蜗牛旅行
 					</span>
 				</div>
-				<div id="container" style="width: 650px;height:400px;margin-top:20px"></div>
-				<div id="container2" style="width: 650px;height:400px;margin-left: 700px;margin-top: -400px;"></div>
+				<div id="container" style="width: 40%;height:400px;margin-top:20px"></div>
+				<div id="container2" style="width: 40%;height:400px;margin-left: 45%;margin-top: -400px;"></div>
 				<div class="number">
 					<div class="enroll">
 						<div class="quantity">
-							10
-						</div>
+						  0
+            </div>
 						<div id="enroll_number">
 							今日注册用户量
 						</div>
 					</div>
 					<div class="visit">
 						<div class="quantity">
-							100
-						</div>
+							2
+            </div>
 						<div id="enroll_number">
 							今日访问总量
 						</div>
 					</div>
 					<div class="total">
 						<div class="quantity">
-							999
+							4
 						</div>
 						<div id="enroll_number">
 							累计用户量
