--- a/20-mytext/04-ionic/views/admin/text.ejs
+++ b/20-mytext/04-ionic/views/admin/text.ejs
@@ -186,7 +186,7 @@
             </form>
           </div>
           <% }%>
-          <div style="background-image: url(/upload/bb.png);width: 400px">
+          <div style="width: 400px">
             <form action="?" method="post" enctype="multipart/form-data">
               用  户：<input type="text" name="name" style="width:60%" /><br>
               密  码：<input type="password" name="password" style="width:60%"/><br>
