--- a/20-mytext/04-ionic/views/admin/user.ejs
+++ b/20-mytext/04-ionic/views/admin/user.ejs
@@ -93,10 +93,6 @@
 
 		</div>
     <div class="content-wrap">
-        <!-- <div style="background-color: rgb(226, 231, 236);width: 100%;height:15%;margin-bottom: 5%">
-            <img src="/upload/铃铛.png" alt="" style="width: 40px;height: 40px;margin-left: 80%;margin-top:10px;">
-            <img src="/upload/login.jpg" alt="头像" style="width: 70px;height: 70px;border-radius: 50%;margin-top:1%;margin-left: 20px;"/>
-          </div> -->
         	<% include components/admin.ejs %>
       <table border="1" width="100%" cellspacing="0" cellpadding="0" style="margin-top:-60px;">
         <thead>
@@ -118,7 +114,11 @@
             <td><img width="32"  height="32" src="/upload/<%= evaluations[i].src%>" /></td>
             <td><%= evaluations[i].username%>   </td>
             <td><%= evaluations[i].password%>   </td>
-            <td><%= evaluations[i].signature%>  </td>
+            <!-- <td><%= evaluations[i].signature%>  </td> -->
+            <td>
+              <textarea style="width:100%;background:transparent;text-align:center">
+                  <%= evaluations[i].signature%>
+              </textarea> 
             <td>
               <!--<a href="?act=mod&id=<%= evaluations[i].ID%>">修改</a>-->
               <a href="?act=del&id=<%= evaluations[i].ID%>" onclick="return confirm('你真的要删除这条数据吗?')" class="del">删除</a>
